--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEACHABLE MACHINE</title>
 </head>
 <body>
-  안녕하세요  
+  <div class="container">
+    <div class="cam">카메라</div>
+    <div class="title">이름</div>
+    <div class="percent">정확도</div>
+    <div>설명</div>
+</div>
 </body>
 </html>
