--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="cam">카메라</div>
     <div class="title">이름</div>
     <div class="percent">정확도</div>
-    <div>설명</div>
+    <div>설명!!</div>
 </div>
 </body>
 </html>
