--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div class="cam">카메라</div>
     <div class="title">이름</div>
     <div class="percent">정확도</div>
-    <div>설명!!</div>
+    <div>설명</div>
+    소스 코드를 수정하고 저장하면
+    변경 사항에 업데이트 됩니다~~
+
+    그 다음에 커밋 및 메시지를 작성하고
+    푸시를 하시면 됩니다 ㅎㅎ
 </div>
 </body>
 </html>
