--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     변경 사항에 업데이트 됩니다~~
 
     그 다음에 커밋 및 메시지를 작성하고
-    푸시를 하시면 됩니다 ㅎㅎ
+    푸시를 하시면 됩니다 ㅎㅎ 이거 지워요?? 마음대로하셔요 ㅎㅎ
 </div>
 </body>
 </html>
