--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <title>TEACHABLE MACHINE</title>
-</head>
-<body>
-  <div class="container">
-    <div class="cam">카메라</div>
-    <div class="title">이름</div>
-    <div class="percent">정확도</div>
-    <div>설명</div>
-    소스 코드를 수정하고 저장하면
-    변경 사항에 업데이트 됩니다~~
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Learn Teachable Machine</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="camera"></div>
+      <div class="name">Teachable Machine</div>
+      <div class="percent">100%</div>
+      <div class="description">카메라 아이콘을 클릭하세요</div>
+      <div class="icon">
+        <i class="fas fa-video"></i>
+        <i class="fas fa-video-slash invisible"></i>
+      </div>
+    </div>
 
-    그 다음에 커밋 및 메시지를 작성하고
-    푸시를 하시면 됩니다 ㅎㅎ 이거 지워요?? 마음대로하셔요 ㅎㅎ
-</div>
-</body>
+    <script src="https://kit.fontawesome.com/d4dade5e61.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
